--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -135,3 +135,203 @@
               <br>2 Bathrooms
             </div>
           </div>
+          <div class="user"><strong>Owner:</strong> Theta Beta Bois</div>
+          <div class="description">
+            So, we've got this old couch that's currently going unused in our
+            frat house (Theta Beta Bois boiiiii!) We know trying to find school
+            housing sucks, right? So, like, we thought, you know what would be
+            a good idea? We should offer our couch for a student in need! Join
+            us bro, we're the chillest bros around, and you know we throw the
+            littest Friday night bangers!
+          </div>
+
+          <div class="amenities">
+            <h2>Amenities</h2>
+            <ul>
+              <li>
+                <i class="fa fa-gamepad" aria-hidden="true"></i>
+                <p>Video games</p>
+              </li>
+              <li>
+                <i class="fa fa-shower" aria-hidden="true"></i>
+                <p>Shower</p>
+              </li>
+              <li>
+                <i class="fa fa-fire" aria-hidden="true"></i>
+                <p>Litness</p>
+              </li>
+            </ul>
+          </div>
+
+          <div class="reviews">
+            <h2>2 Reviews</h2>
+            <h3>From Jonny the June 18 2017</h3>
+            <ul>
+              <li>
+                <p>
+                  Had the dankest stay here, thanks bois!
+                </p>
+              </li>
+            </ul>
+            <h3>From Carson the April 22 2018</h3>
+            <ul>
+              <li>
+                <p>
+                  You bros know what I'm talking about. You know. Stay lit.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </article>
+
+        <article>
+          <div class="name_and_price">
+            <h2>Are You My Soul Mate?</h2>
+            <div class="price_by_night">&#36;0</div>
+          </div>
+
+          <div class="information">
+            <div class="max_guest">
+              <i class="fa fa-users fa-3x" aria-hidden="true"></i>
+              <br>1 Guest
+            </div>
+            <div class="number_rooms">
+              <i class="fa fa-bed fa-3x" aria-hidden="true"></i>
+              <br>4 Rooms
+            </div>
+            <div class="number_bathrooms">
+              <i class="fa fa-bath fa-3x" aria-hidden="true"></i>
+              <br>1 Bathrooms
+            </div>
+          </div>
+
+          <div class="user">
+            <strong>Owner:</strong> Avocado &#38; Alpaca Spiritualist
+OA          </div>
+
+          <div class="description">
+            Hi there. You're reading this right now, yes? I can sense it. Now,
+            are you my soul mate? If so, I await you. Yes, you, you fellow
+            spiritualist. You, who dedicates each morning carefully tending your
+OA            backyard grove of avocado trees. You, who cannot spend one day away
+            from the presence of your family of 17 alpacas. You know who you
+            are. Unite with me. Unite with my spirit. I have two boiled eggs
+            waiting for you.
+          </div>
+OA
+          <div class="amenities">
+            <h2>Amenities</h2>
+OAOA            <ul>
+              <li>
+                <i class="fa fa-heart" aria-hidden="true"></i>
+                <p>Love</p>
+OA              </li>
+OA            </ul>
+          </div>
+
+OA          <div class="reviews">
+            <h2>3 Reviews</h2>
+            <h3>From Michel the January 2 2018</h3>
+OA            <ul>
+              <li>
+OA                <p>
+                  My love. It is me. I'm coming.
+                </p>
+              </li>
+OA            </ul>
+            <h3>From Jean the March 23 2018</h3>
+            <ul>
+OA              <li>
+                <p>
+                  You had me at "Hi there." And then you went and said you
+                  prepared two boiled eggs.
+                </p>
+              </li>
+            </ul>
+            <h3>From Peter the May 1 2018</h3>
+            <ul>
+              <li>
+                <p>
+                  I thought I would never find you, yet here I am, fresh
+                  from tending to my avocado trees, feeling as I've never
+                  felt before in my life.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </article>
+
+        <article>
+          <div class="name_and_price">
+            <h2>Normal, Regular House</h2>
+            <div class="price_by_night">&#36;75</div>
+          </div>
+
+          <div class="information">
+            <div class="max_guest">
+              <i class="fa fa-users fa-3x" aria-hidden="true"></i>
+              <br>4 Guests
+            </div>
+            <div class="number_rooms">
+              <i class="fa fa-bed fa-3x" aria-hidden="true"></i>
+              <br>5 Rooms
+            </div>
+            <div class="number_bathrooms">
+              <i class="fa fa-bath fa-3x" aria-hidden="true"></i>
+              <br>3 Bathrooms
+            </div>
+          </div>
+
+          <div class="user">
+            <strong>Owner:</strong> Triss</div>
+          <div class="description">
+            Standard, non-occupied, five-bed, three-bath house in a quiet
+            neighborhood. Based on all the other options on this site, I
+            shouldn't need to say anything else at all.
+          </div>
+
+          <div class="amenities">
+            <h2>Amenities</h2>
+            <ul>
+              <li>
+                <i class="fa fa-wifi" aria-hidden="true"></i>
+                <p>Wifi</p>
+              </li>
+              <li>
+                <i class="fa fa-thermometer-three-quarters" aria-hidden="true"></i>
+                <p>Air conditioning</p>
+              </li>
+              <li>
+                <i class="fa fa-paw" aria-hidden="true"></i>
+                <p>Pet friendly</p>
+              </li>
+              <li>
+                <i class="fa fa-print" aria-hidden="true"></i>
+                <p>Printer</p>
+              </li>
+              <li>
+                <i class="fa fa-coffee" aria-hidden="true"></i>
+                <p>Coffee machine</p>
+              </li>
+            </ul>
+          </div>
+
+          <div class="reviews">
+            <h2>1 Review</h2>
+            <h3>From Marty the December 12 2018</h3>
+            <ul>
+              <li>
+                <p>Eh, it was okay.</p>
+              </li>
+            </ul>
+          </div>
+        </article>
+
+      </section>
+    </div>
+
+    <footer>
+      Holberton School
+    </footer>
+  </body>
+</html>
